Fix code for java 8 compiler.